--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>https://fastapi.tiangolo.com/</title>
+    <title>Get Data</title>
     <meta charset="utf-8" />
 </head>
 <body>
-    <h2>Hello FastAPI</h2>
+    <div id="message"></div>
+     <p>
+        Enter your name: <br />
+        <input name="username" id="username" />
+    </p>
+     <p>
+        Enter your age: <br />
+        <input name="userage" id="userage" type="number" />
+    </p>
+    <button onclick="send()">Send</button>
+<script>
+    async function send(){
+
+        // Get your name and age
+        const username = document.getElementById("username").value;
+        const userage = document.getElementById("userage").value;
+
+        // Send request
+        const response = await fetch("/hello", {
+                method: "POST",
+                headers: { "Accept": "application/json", "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    name: username,
+                    age: userage
+                })
+            });
+            if (response.ok) {
+                const data = await response.json();
+                document.getElementById("message").textContent = data.message;
+            }
+            else
+                console.log(response);
+    }
+</script>
 </body>
 </html>
